# talkie

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
src/: client.c  common.h  listener.c  ncwrap.h  server.c  verbose.c
